# Formant

./: .gitattributes  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SPEC.md  THIRD-PARTY-NOTICES.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/app/: Cargo.toml  build.rs  icon.rgba
crates/app/src/: engine.rs  logging.rs  main.rs  platform.rs  spectrum.rs  theme.rs  tray.rs  ui.rs  vst.rs
crates/audio/: Cargo.toml
crates/audio/examples/: duplex_smoke.rs  list_devices.rs  monitor_chain.rs
crates/audio/src/: client.rs  com.rs  devices.rs  duplex.rs  hotkeys.rs  lib.rs  select.rs
crates/core/: Cargo.toml
crates/core/src/: backend.rs  config.rs  control.rs  engine.rs  graph.rs  lib.rs  params.rs  persist.rs  presets.rs  resample.rs  router.rs  session.rs  shared.rs  types.rs
crates/core/src/dsp/: autotune.rs  biquad.rs  chorus.rs  compressor.rs  deesser.rs  delay.rs  denoise.rs  eq.rs  gate.rs  limiter.rs  loudness.rs  mod.rs  pitch.rs  pitch_detect.rs  reverb.rs  saturator.rs
crates/vst3/: Cargo.toml
crates/vst3/examples/: editor_test.rs  list_plugins.rs  process_test.rs
crates/vst3/src/: component_handler.rs  editor.rs  host.rs  host_context.rs  lib.rs  loader.rs  module.rs  param_changes.rs
packaging/: build-msi.ps1  build-portable.ps1  install.ps1  make-icon.ps1  uninstall.ps1
packaging/wix/: formant.wxs
