[package]
name = "formant"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "formant"

[[bin]]
name = "formant"
path = "src/main.rs"

[dependencies]
formant-core.workspace = true
formant-audio.workspace = true
formant-vst3.workspace = true
anyhow.workspace = true
ctrlc.workspace = true
eframe.workspace = true
rfd = { version = "0.15", default-features = false }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
