[package]
name = "formant"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "formant"

[[bin]]
name = "formant"
path = "src/main.rs"

[dependencies]
formant-core.workspace = true
formant-audio.workspace = true
formant-vst3.workspace = true
anyhow.workspace = true
ctrlc.workspace = true
eframe.workspace = true
rfd = { version = "0.15", default-features = false }
tray-icon = "0.19"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
