[package]
name = "formant-audio"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
formant-core.workspace = true
anyhow.workspace = true
rtrb.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Threading",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Security",
    "Win32_UI_Input_KeyboardAndMouse",
] }
